common InputParsers.java enable preview